# blink-installer

./: .gitignore  CMakeLists.txt  README.md
debian/: blink-installer.install  changelog  control  copyright  rules
docs/: CMakeLists.txt  oem.md  sw.md
hooks/: CMakeLists.txt  basic_utils.sh  first_boot_setup.sh  hook_manager.sh
hooks/after_chroot/: 00_print_installer_conf.job  01_copy_aptcache.job  89_copy_installer_log.job  90_unmount.job  genfstab
hooks/before_chroot/: 11_mount_target.job  21_extract_base_filesystem.job  85_copy_settings_file.job  99_print_info.job
hooks/in_chroot/: 02_setup_bootloader_arm64.job  02_setup_bootloader_x86.job  09_generate_machine_id.job  33_setup_lightdm_auto_login.job  49_generate_reboot_setup_file.job  55_customize_user.job  91_remove_unused_packages.job  92_setup_apt_sources.job  99_update_initramfs_sw.job
i18n/: CMakeLists.txt  installer.ts  update_ts.py
resources/: CMakeLists.txt  generate-index.py
resources/icons/: blink-installer.desktop  icons.h  icons.qrc
resources/images/: README.md  images.h  images.qrc
resources/misc/: misc.h  misc.qrc  scan-regdomain.sh
resources/settings/: README.md  default_settings.ini  default_settings_aarch64.ini  default_settings_mips64.ini  default_settings_sw64.ini  default_settings_x86_64.ini
resources/slide/: CMakeLists.txt  slide.h  slide.qrc
resources/spinner/: spinner.qrc
resources/styles/: README.md  styles.h
resources/system/: CMakeLists.txt
src/: CMakeLists.txt
src/app/: CMakeLists.txt  blink_installer.cpp  blink_installer_settings.cpp  blink_installer_unsquashfs.cpp  control_button_test.cpp  deepin_installer_first_boot.cpp  deepin_installer_simpleini.cpp  timezone_frame_test.cpp  unsquashfs_progress.cpp
src/base/: CMakeLists.txt  command_test.cpp  file_util.cpp  file_util.h  file_util_test.cpp  string_util_test.cpp
src/config/: CMakeLists.txt  config.h.in
src/controllers/: CMakeLists.txt  main_controller.cpp  main_controller.h  shell.cpp  shell.h
src/oem/: CMakeLists.txt
src/oem/models/: oem_settings_model.cpp
src/partman/: CMakeLists.txt  device.h  fs.cpp  fs.h  libparted_util.cpp  libparted_util_test.cpp  operation.h  operation_test.cpp  os_prober.cpp  os_prober.h  os_prober_test.cpp  partition.h  partition_format.cpp  partition_format.h  partition_manager.cpp  partition_manager_test.cpp  partition_test.cpp  partition_usage_test.cpp  utils.cpp
src/service/: CMakeLists.txt  hooks_manager.cpp  installer_args_parser.cpp  installer_args_parser.h  installer_args_parser_test.cpp  languages.cpp  languages.h  log_manager.cpp  screen_brightness.cpp  settings_manager.cpp  settings_manager.h  settings_name.h  system_language.cpp  system_language.h  system_languages_test.cpp  timezone_manager.cpp
src/service/backend/: hooks_pack.cpp  hooks_pack.h  hooks_pack_test.cpp  wifi_inspect_worker.cpp
src/sysinfo/: CMakeLists.txt  dev_disk.h  dev_disk_test.cpp  iso3166.h  iso3166_test.cpp  keyboard.cpp  keyboard.h  keyboard_test.cpp  proc_meminfo_test.cpp  proc_mounts.cpp  proc_mounts.h  proc_mounts_test.cpp  proc_partitions.cpp  proc_partitions.h  proc_partitions_test.cpp  proc_swaps.cpp  proc_swaps.h  proc_swaps_test.cpp  release_version.cpp  release_version.h  timezone.cpp  timezone.h  timezone_test.cpp  users_test.cpp  validate_hostname.cpp  validate_hostname_test.cpp  validate_password_test.cpp  validate_username.cpp  validate_username_test.cpp
src/tests/: CMakeLists.txt  qt_test_main.cpp
src/ui/: CMakeLists.txt  first_boot_setup_window.h  main_window.cpp  main_window.h
src/ui/delegates/: advanced_validate_state.h  avatar_list_delegate.cpp  frameless_list_delegate.cpp  install_slide_frame_util.cpp  install_slide_frame_util.h  install_slide_frame_util_test.cpp  main_window_util.cpp  partition_util.cpp  table_combo_box_delegate.cpp  timezone_map_util_test.cpp
src/ui/frames/: confirm_quit_frame.cpp  control_panel_frame.cpp  control_panel_frame.h  disk_space_insufficient_frame.cpp  install_failed_frame.cpp  install_progress_frame.cpp  install_success_frame.cpp  partition_frame.cpp  partition_frame.h  privilege_error_frame.cpp  select_language_frame.cpp  system_info_frame.cpp  timezone_frame.cpp  virtual_machine_frame.cpp
src/ui/frames/inner/: advanced_partition_frame.cpp  edit_partition_frame.cpp  full_disk_frame.cpp  full_disk_frame.h  install_progress_slide_frame.cpp  new_partition_frame.cpp  new_table_warning_frame.cpp  partition_table_warning_frame.cpp  prepare_install_frame.cpp  simple_partition_frame.cpp  simple_partition_frame.h  system_info_avatar_frame.cpp  system_info_form_frame.cpp  system_info_keyboard_frame.cpp
src/ui/tests/: ctl_btn_test.cpp
src/ui/utils/: widget_util.cpp
src/ui/views/: frameless_list_view.cpp
src/ui/widgets/: advanced_partition_button.cpp  avatar_button.cpp  comment_label.cpp  device_model_label.cpp  flat_button.cpp  line_edit.cpp  nav_button.cpp  page_indicator.cpp  partition_size_slider.cpp  popup_menu.cpp  qr_widget.cpp  simple_disk_button.cpp  simple_partition_button.cpp  system_info_tip.cpp  table_combo_box.cpp  timezone_map.cpp  timezone_map.h  title_label.cpp  tooltip_pin.cpp
src/ui/xrandr/: multi_head_worker.cpp  xrandr_wrapper.cpp  xrandr_wrapper.h
src/unsquashfs/: CMakeLists.txt  README  fs.cpp  fs.h  main.cpp  shell.cpp  shell.h
src/unsquashfs_gui/: CMakeLists.txt  progress_window.cpp  progress_window.h  unsquashfs_gui.cpp  worker.cpp  worker.h
tools/: CMakeLists.txt  install_deps.sh  update_default_settings.py
